--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <finalName>devops-integration</finalName>
+        <finalName>devops-integration1</finalName>
     </build>
 
 </project>
